@@ -2,6 +2,10 @@ Revision history for Perl extension App-Egaz
 
 {{$NEXT}}
 
+    - `egaz template`
+        - Use `linkr` from `intspan` to replace `rangeops` and `jrange`
+        - Use `spanr` from `intspan` to replace `runlist` and `jrunlist`
+
 0.2.3 2019-01-26T19:01:57Z
 
     - `egaz plottree`
